--- a/lesson_05/css/style.css
+++ b/lesson_05/css/style.css
@@ -225,7 +225,8 @@ body {
 }
 
 .card {
-    width: 240px;
+    max-width: 240px;
+    width: 100%;
     padding: 35px 58px 35px 40px;
     background-color: #fff;
 }
